--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 language: android
 android:
   components:
-    - platform-tools
-    - build-tools 
+    - tools
+    - build-tools-24.0.2
     - android-24
-    - extra-android-m2repository
+    - platform-tools
+    - extra-android-support # because I'm use support library
+    - extra-android-m2repository # because I'm use support library
+  licenses:
+    - '.+'
 
+sudo: required
+
+jdk:
+  - oraclejdk8
+
+install: true
+
+before_script:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew assembleRelease --stacktrace
