--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ android:
     - build-tools-24.0.2
     - android-24
     - platform-tools
-    - extra-android-support # because I'm use support library
-    - extra-android-m2repository # because I'm use support library
+    - extra-android-support
+    - extra-android-m2repository
+    - extra-google-m2repository
   licenses:
     - '.+'
 
