--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
+    - extra-google-google_play_services
   licenses:
     - '.+'
 
